kubernetes/infra/harbor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
    argocd.argoproj.io/sync-options: Prune=false
  labels:
    app.kubernetes.io/part-of: private-registry
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
